--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,9 @@
 <body>
 
 	<h1>Hay Day</h1>
-	<p>This is the design and art direction business of Halley Roberts Strongwater</p>
+	<p>This is the design and art direction business of Halley Roberts Strongwater.</p>
 
 </body>
 </html>
+
+
