Unit_9 final project

--- a/unit_9_final_project/index.html
+++ b/unit_9_final_project/index.html
@@ -10,51 +10,58 @@
 	<header>
 		<h1>Big Island Travel Guide</h1><!-- Three Columns -->
 		<nav>
-			<a href="about.html">About</a> 
-			<a href="contact.html">Contact</a>
+			<a href="#">About</a> 
+			<a href="#">Contact</a>
 		</nav><!-- menu button -->
 		<button></button>
+	</header>
+
 	<section>
 		<div class="column">
-			<a href="http://imgur.com/yPxq1ER"><img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus: halleyroberts" /></a>
+			<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
 		</div>
 	</section>
-	</header>
+
 <!-- Decision tree start -->
 
 <main>
-	<section class="columns two-columns clear">
-		<div class="column" id="intro-column1">
-			<h2>Hilo</h2>
+	<section class="columns two-columns">
+		<div class="column">
+			<div id="intro-column1">
+				<h1>Hilo</h1>
+				<img src="http://i.imgur.com/tht7x0Q.jpg" title="cooler_halleyroberts"/>
+			</div>
+		</div>
+		<div class="column">
+			<div id="intro-column2">
+				<h1>Kona</h1>
+				<img src="http://i.imgur.com/tht7x0Q.jpg" title="cooler_halleyroberts"/>
+			</div>
 		</div>
 	</section>
-	<section class="columns two-columns clear">
-		<div class="column" id="intro-column2">
-			<h2>Kona</h2>
-		</div>
-	</section>
-	
-</main>
 
 <!-- Kona -->
 	<section class="columns">
-		<div class="column">
-			<h2>Kona</h2>
-			<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+		<div class="column long-column">
+			<div class="image">
+				<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
+				<h2>Kona</h2>
+				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+			</div>
 		</div>
 		<section class="columns three-columns clear">
 			<div class="column">
-				<h3>do</h3>
+				<h3>do</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>stay</h3>
+				<h3>stay</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>eat</h3>
+				<h3>eat</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
@@ -63,27 +70,38 @@
 
 	<!-- Hilo -->
 	<section class="columns">
-		<div class="column">
-			<h2>Hilo</h2>
-			<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+		<div class="column long-column">
+			<div class="image">
+				<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
+				<h2>Hilo</h2>
+				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+			</div>
 		</div>
 		<section class="columns three-columns clear">
 			<div class="column">
-				<h3>do</h3>
+				<h3>do</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>stay</h3>
+				<h3>stay</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>eat</h3>
+				<h3>eat</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 		</section>
+	</section>
+
+<!-- Big Image -->
+
+<section>
+		<div class="column">
+			<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
+		</div>
 	</section>
 
 <!-- Index -->
@@ -92,57 +110,44 @@
 		</div>
 		<section class="columns three-columns clear">
 			<div class="column">
-				<p>FOOD, SMOOTHIES, SNACK</p>
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
-				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
-			</div>
-			<div class="column">
-				<p>FOOD, LUNCH, SNACK</p>
-				<h4>title</h4>
-				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
-			</div>
-			<div class="column">
-				<p>keywords</p>
-				<h4>title</h4>
+				<hr><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
 		</section>
-	</section>
-
-<!-- Index -->
-	<section class="columns">
-		<div class="column">
-		</div>
 		<section class="columns three-columns clear">
 			<div class="column">
-				<p>FOOD, SMOOTHIES, SNACK</p>
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
+				<hr><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
+		</section>
+		<section class="columns three-columns clear">
 			<div class="column">
-				<p>FOOD, LUNCH, SNACK</p>
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
-				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
-			</div>
-			<div class="column">
-				<p>keywords</p>
-				<h4>title</h4>
+				<hr><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
 		</section>
 	</section>
 
+
 <!-- Index -->
-		<p>keywords</p>
+		<!-- <p>keywords</p>
 		<h3>Title</h3>
 		<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
-	<img src="#">Images</img>
+	<img src="#">Images</img> -->
+</main>
 
 <!-- Footer -->
 	<footer>
 		<nav>
+		<hr>
 			<a href="#">About</a> 
-		<a href="#">Contact</a>
+			<a href="#">Contact</a>
 		</nav>
 	</footer>
 
