Final project submission!

--- a/unit_9_final_project/index.html
+++ b/unit_9_final_project/index.html
@@ -4,92 +4,93 @@
 <head>
 	<title>Big Island Travel Guide</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
 	<header>
-		<h1>Big Island Travel Guide</h1><!-- Three Columns -->
+		<!-- Three Columns -->
+		<h1>The Big Island</h1>
 		<nav>
-			<a href="#">About</a> 
-			<a href="#">Contact</a>
-		</nav><!-- menu button -->
-		<button></button>
+			<a href="#">ABOUT</a> 
+			<a href="#">CONTACT</a>
+		</nav>
+
+		<!-- menu button -->
+		<div class="hamburger-menu">
+		  <div class="bar"></div>	
+		</div>	
 	</header>
 
 	<section>
-		<div class="column">
-			<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
+		<div class="column" id="map">
 		</div>
 	</section>
 
 <!-- Decision tree start -->
 
 <main>
-	<section class="columns two-columns">
+	<section class="columns two-columns" id="kona-graf">
 		<div class="column">
-			<div id="intro-column1">
-				<h1>Hilo</h1>
-				<img src="http://i.imgur.com/tht7x0Q.jpg" title="cooler_halleyroberts"/>
+			<img src="http://i.imgur.com/IKrZQ42.png" title="kona-gradient" />			
 			</div>
 		</div>
-		<div class="column">
-			<div id="intro-column2">
-				<h1>Kona</h1>
-				<img src="http://i.imgur.com/tht7x0Q.jpg" title="cooler_halleyroberts"/>
-			</div>
+		<div class="column" id="hilo-graf">
+			<img src="http://i.imgur.com/WFTlS9R.png" title="hilo-gradient" />
 		</div>
 	</section>
 
 <!-- Kona -->
-	<section class="columns">
+	<section class="columns" id="kona-image">
 		<div class="column long-column">
-			<div class="image">
-				<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
-				<h2>Kona</h2>
-				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+			<div class="image1">
+				<h2>Kona</h2><br><hr class="style1"><br>
+				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu</p>
 			</div>
 		</div>
 		<section class="columns three-columns clear">
-			<div class="column">
-				<h3>do</h3><br>
+			<div class="column second nav">
+				<h3>DO</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>stay</h3><br>
+				<h3>STAY</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>eat</h3><br>
+				<h3>EAT</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
+				</div>
 			</div>
 		</section>
 	</section>
 
 	<!-- Hilo -->
-	<section class="columns">
+	<section class="columns" id="hilo-image">
 		<div class="column long-column">
-			<div class="image">
-				<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
-				<h2>Hilo</h2>
-				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu.</p>
+			<div class="image2">
+				<h2>Hilo</h2><br><hr class="style1"><br>
+				<p>Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu. Single-origin coffee portland lo-fi +1, distillery mixtape bespoke yr freegan heirloom irony poutine succulents. Iceland tumeric authentic williamsburg, umami kickstarter 3 wolf moon chicharrones glossier hammock tofu</p>
 			</div>
 		</div>
+
 		<section class="columns three-columns clear">
 			<div class="column">
-				<h3>do</h3><br>
+				<h3>DO</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>stay</h3><br>
+				<h3>STAY</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
 			<div class="column">
-				<h3>eat</h3><br>
+				<h3>EAT</h3><br>
 				<p>Venmo direct trade messenger bag, sustainable chartreuse lo-fi shaman actually chicharrones narwhal franzen skateboard.
 				</p>
 			</div>
@@ -100,7 +101,7 @@
 
 <section>
 		<div class="column">
-			<img src="http://i.imgur.com/yPxq1ER.jpg" title="hibiscus_halleyroberts"/>
+		<img src="http://i.imgur.com/5bWB9Ad.png" title="gradient-warm"/>
 		</div>
 	</section>
 
@@ -112,23 +113,37 @@
 			<div class="column">
 				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
-				<hr><br>
+				<hr class="style1"><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
-		</section>
-		<section class="columns three-columns clear">
 			<div class="column">
 				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
-				<hr><br>
+				<hr class="style1"><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
-		</section>
-		<section class="columns three-columns clear">
 			<div class="column">
 				<h5>FOOD, SMOOTHIES, SNACK</h5>
 				<h4>title</h4>
-				<hr><br>
+				<hr class="style1"><br>
+				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
+			</div>
+				<div class="column">
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
+				<h4>title</h4>
+				<hr class="style1"><br>
+				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
+			</div>
+			<div class="column">
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
+				<h4>title</h4>
+				<hr class="style1"><br>
+				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
+			</div>
+			<div class="column">
+				<h5>FOOD, SMOOTHIES, SNACK</h5>
+				<h4>title</h4>
+				<hr class="style1"><br>
 				<p>Etsy brunch raw denim, freegan twee put a bird on it irony succulents cardigan coloring book before they sold out.</p>
 			</div>
 		</section>
@@ -145,12 +160,18 @@
 <!-- Footer -->
 	<footer>
 		<nav>
-		<hr>
+		<hr class="style1">
 			<a href="#">About</a> 
 			<a href="#">Contact</a>
 		</nav>
 	</footer>
-
+<script type="text/javascript">(function () {
+	$('.hamburger-menu').on('click', function() {
+		$('body').toggleClass('menuactive');
+		$('.bar').toggleClass('animate');
+	})
+})();
+</script>
 
 
 </body>
